# elearning

./: README.md
c_ws/criterion_make_template/org_src/: queue_array.c
c_ws/criterion_make_template/tests/: queuetests.c
c_ws/ncurses_tutorial/: Makefile
c_ws/ncurses_tutorial/src/: hello.cpp
c_ws/progress_bar/: Makefile
courses/linux/: kernels_and_logging.md
cpp_ws/: .gitignore  Vagrantfile
cpp_ws/criterion_make_template/: Makefile
cpp_ws/criterion_make_template/src/: myqueue.h
cpp_ws/data/exercises/composition/: CMakeLists.txt  main.cpp  todo.md
cpp_ws/data/exercises/composition/src/: CMakeLists.txt  computer.cpp  computer.h
cpp_ws/data/exercises/composition/src/interfaces/: i_printer.h
cpp_ws/data/exercises/composition/src/linux/: linux_printer.cpp  linux_printer.h
cpp_ws/data/exercises/composition/src/windows/: windows_printer.cpp  windows_printer.h
cpp_ws/data/exercises/composition/tests/: CMakeLists.txt  test_computer.cpp
cpp_ws/data/gtest_cmake_template/src/: calculator.cpp
cpp_ws/data/gtest_cmake_template/tests/: test_calculator.cpp
cpp_ws/data/gtest_helloworld/: CMakeLists.txt  main.cpp
cpp_ws/data/gtest_helloworld/src/: CMakeLists.txt
cpp_ws/data/gtest_helloworld/tests/: CMakeLists.txt  test_calculator.cpp
cpp_ws/data/project_setup_tutorial/src/: myqueue.c
cpp_ws/data/project_setup_tutorial/tests/: queuetests.c
cpp_ws/data/templates/: Makefile_bin
cpp_ws/gtest_cmake_template/tests/: CMakeLists.txt
cpp_ws/linkedin_learning/parallel_programming/: notes.md
cpp_ws/pluralsight/sequential_containers/: CMakeLists.txt
cpp_ws/pluralsight/sequential_containers/test_binary/: CMakeLists.txt
cpp_ws/pluralsight/sequential_containers/vector_demo/: CMakeLists.txt
cpp_ws/progress_bar/src/: progbar.h
cpp_ws/provisioning/: dev_prov.sh
cpp_ws/vagrant/: Vagrantfile
cpp_ws/vagrant/provisioning/: dev_prov.sh
pluralsight/python_ws/: .gitignore  Vagrantfile
pluralsight/python_ws/data/linux_admin_demo/: input.py  process.py
pluralsight/python_ws/data/linux_system_admin/: mytarfile.tar
pluralsight/python_ws/data/unit_testing/: linkedin_notes.md
python_ws/: Vagrantfile  provision.sh
python_ws/core_python/: urlopen_example.py
python_ws/core_python/modularity/: readme.md  words.py
python_ws/data/linux_system_admin/: python_modules.md
python_ws/data/linux_system_admin/bash_vs_python/: checkhosts.py  factorial.py
python_ws/data/linux_system_admin/linux_admin_demo/: input.json
python_ws/data/unit_testing/: linkedin_notes.md  pluralsight_notes.md
python_ws/data/unit_testing/pytest/: simple_example.py
python_ws/data/unit_testing/unittest/: phonebook.py
python_ws/linux_system_admin/bash_vs_python/: finduid.sh
python_ws/unit_testing/pytest/fizzbuzzkata/: test_fizzbuzz.py
python_ws/unit_testing/pytest/phonebook_pytest2/: setup.py
python_ws/unit_testing/pytest/supermarket_checkout_kata/: test_checkout.py
vagrant_linux_dev_machine/: .gitignore  Vagrantfile
vagrant_linux_dev_machine/provisioning/: dev_prov.sh
vagrant_linux_dev_machine/shared/c_ws/: .gitignore
vagrant_linux_dev_machine/shared/c_ws/criterion_make_template/: Makefile
vagrant_linux_dev_machine/shared/c_ws/exploring_c_libraries/: notes.md
vagrant_linux_dev_machine/shared/c_ws/makefile_templates/: Makefile_bin
vagrant_linux_dev_machine/shared/c_ws/makefile_tutorial/: Makefile
vagrant_linux_dev_machine/shared/linux_ws/: kutmodszertan.txt
(+197 files in other folders)
